--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
     "bootstrap": "~3.3.2",
-    "select2": "~3.5.2"
+    "select2": "~3.5.2",
+    "fontawesome": "~4.3.0"
   }
 }
