--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "ember-select-2": "1.2.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
+  },
+  "dependencies": {
+    "rimraf": "2.2.8"
   }
 }
