--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "qunit": "~1.17.1",
     "bootstrap": "~3.3.2",
     "select2": "~3.5.2",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "d3": "~3.5.5"
   }
 }
