--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "bootstrap": "~3.3.2",
     "select2": "~3.5.2",
     "fontawesome": "~4.3.0",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "materialize": "~0.96.0"
   }
 }
