--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-materialize": "0.13.0",
     "ember-cli-qunit": "0.3.9",
+    "ember-cli-sass": "3.3.1",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
