--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
-    "ember-select-2": "1.2.0"
+    "ember-select-2": "1.2.0",
+    "emberfire": "1.4.4"
   }
 }
