--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "bartender",
   "dependencies": {
-   
     "ember": "1.13.6",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
@@ -10,12 +9,12 @@
     "ember-qunit": "0.4.9",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.1",
+    "jquery": "~2.1.4",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.18.0",
     "select2": "~3.5.2",
     "d3": "~3.5.5",
-    "materialize": "~0.96.0",
+    "materialize": "~0.97.0",
     "firebase": "^2.1.0"
   }
 }
