--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "ember-cli-materialize": "0.17.3",
     "ember-cli-qunit": "0.3.20",
     "ember-cli-release": "0.2.3",
+    "ember-cli-sass": "^3.3.1",
     "ember-cli-sri": "^1.0.1",
-    "ember-cli-sass": "4.0.1",
     "ember-cli-uglify": "^1.0.1",
+    "ember-composability": "0.0.6",
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-key-responder": "^0.2.1",
+    "ember-modal-dialog": "^0.7.7",
+    "ember-new-computed": "^1.0.2",
+    "ember-radio-button": "^1.0.4",
     "ember-select-2": "1.3.0",
     "emberfire": "1.5.0"
   }
